# AirbnbClone

./: README.md  db.sqlite3  oop_test.py  pyproject.toml
airbnb-clone-frontend/: package-lock.json  package.json
airbnb-clone-frontend/src/: App.tsx  api.ts  index.tsx  type.d.ts
bookings/: admin.py  models.py  serializers.py
bookings/migrations/: 0001_initial.py  0002_alter_booking_experience_alter_booking_room_and_more.py
categories/: models.py  serializers.py  views.py
categories/migrations/: 0001_initial.py  0002_alter_category_options.py
common/: models.py
config/: authentication.py  settings.py  urls.py
direct_messages/: models.py
direct_messages/migrations/: 0001_initial.py
experiences/: models.py  views.py
experiences/migrations/: 0001_initial.py  0002_experience_category_alter_perk_details_and_more.py
houses/: admin.py  models.py
houses/migrations/: 0001_initial.py  0002_initial.py  0002_rename_price_house_price_per_night.py  0003_house_pets_allowed.py
medias/: models.py  views.py
medias/migrations/: 0001_initial.py  0002_alter_photo_file_alter_video_file.py  0003_alter_photo_room.py
reviews/: admin.py  models.py
reviews/migrations/: 0001_initial.py  0002_alter_review_experience_alter_review_room_and_more.py
rooms/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
rooms/migrations/: 0001_initial.py  0002_amenity_created_at_amenity_updated_at_and_more.py  0003_room_name_alter_amenity_description.py  0004_alter_amenity_options.py  (+2 more)
users/: admin.py  models.py  urls.py  views.py
wishlists/: views.py
(+25 files in other folders)
