[tool.poetry]
name = "airbnb"
version = "0.1.0"
description = ""
authors = ["KimUJeon <kinfe_411@naver.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.1"
pillow = "^10.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
